force-app/main/default/objects/OmniObjectVisualzer__c/OmniObjectVisualzer__c.object-meta.xml
<CustomObject>
    <label>OmniObjectTracker</label>
    <nameField>
        <label>OmniObjectVisualzer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OmniObjectTrackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>