force-app/main/default/objects/OmniObjectVisualzer__c/fields/ObjDetails__c.field-meta.xml
<CustomField>
    <fullName>ObjDetails__c</fullName>
    <description>The Arbitrary details for the Object</description>
    <label>ObjDetails</label>
    <type>TextArea</type>
</CustomField>