force-app/main/default/objects/OmniObjectVisualzer__c/fields/ObjId__c.field-meta.xml
<CustomField>
    <fullName>ObjId__c</fullName>
    <description>This is the Omni Object&apos;s Id</description>
    <label>ObjId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>