force-app/main/default/objects/OmniObjectVisualzer__c/fields/ObjsReferenced__c.field-meta.xml
<CustomField>
    <fullName>ObjsReferenced__c</fullName>
    <description>Omni Object referencing the named Omni object</description>
    <label>ObjsReferenced</label>
    <type>TextArea</type>
</CustomField>