force-app/main/default/objects/OmniObjectVisualzer__c/fields/ObjsReferencing__c.field-meta.xml
<CustomField>
    <fullName>ObjsReferencing__c</fullName>
    <description>What the Omni Object referencing</description>
    <label>ObjsReferencing</label>
    <type>TextArea</type>
</CustomField>